infrastructure/components/openbao/configs/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao
  namespace: openbao
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: openbao.prod.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-active
                port:
                  number: 8200
  tls:
    - hosts:
        - openbao.prod.example.com
      secretName: openbao-tls
